<resources>
    <string name="app_name">PlatzigramKotlin</string>
    <string name="platzigram_logo">Platzigram Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="no_account">Don\'t have account?</string>
    <string name="create_here">Create here!</string>
    <string name="join_us">Join us!</string>
    <string name="create_account">Create Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
