<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@color/colorPrimary">

    <ImageView
            android:layout_width="206dp"
            android:layout_height="58dp" app:srcCompat="@drawable/platzigram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fillViewport="true"
            android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/platzigram_logo" android:id="@+id/imageViewLogo"
            app:layout_constraintHorizontal_bias="0.497"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="50dp">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/textInputUsername"
                        android:hint="@string/username"
                        android:singleLine="true"
                        android:textSize="20sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/editTextColorWhite">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/textInputPassword"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textSize="20sp"
                />

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonLogin"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:theme="@style/RaisedButtonDark"
            />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>